--- a/jkafalkf.html
+++ b/jkafalkf.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
   <html>
     <head>
-  		<title>Old Page</title>
-  			<meta charset="UTF-8" />
-  			<meta http-equiv="refresh" content="3; URL=https://apkadmin.com/cwrqb02mhxk4/FoodGame15.0.apk.html" />
+  		<title>скачать</title>
+  		
   	</head>
   	<body>
   		<p>Для скачивания, выдели https://grabify.link/20MI3M эту ссылку и скопируй, потом втавь в гугл хром и скачивай</p>
